# innovathon-project

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN.md  README.md  main.py  pyproject.toml  relationship-diagram.mmd  request-flow.mmd
client/: cli.py
common/: __init__.py  errors.py  logging_config.py  pyproject.toml
gateway/: main.py
server_datetime/: main.py
server_sqlite/: main.py
